--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,19 @@ body {
 	color: black;
 }
 
+main {
+	margin: auto;
+	width: 800px;
+}
+
+.deco_div {
+	position: relative;
+	margin: auto;
+	margin-top: -40px;
+	width: 800px;
+	text-align: right;
+}
+
 .deco {
 	text-decoration: none;
 }
@@ -49,6 +62,12 @@ input[type=submit], select {
 .fa-check-circle {
 	color: green;
 }
+.fa-hat-wizard {
+	color: #aa00ff;
+}
+.fa-shield-alt {
+	color: #0088dd;
+}
 
 .sante_max {
 	display: inline-block;
@@ -73,6 +92,12 @@ input[type=submit], select {
 	border: 1px solid black;
 	margin-top: 4px;
 	text-align: center;
+	font-weight: bold;
 	text-decoration: none;
 	color: black;
+	border-radius: 5px;
+}
+.lien_frapper:hover {
+	background-color: #ff0000;
+	color: white;
 }
