--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,10 @@ input[type=submit], select {
 	color: #ffcc00;
 	transition: .5s all;
 }
+.fa-gavel {
+	color: #3333ff;
+	transition: .5s all;
+}
 
 .sante_max {
 	position: relative;
@@ -158,7 +162,7 @@ input[type=submit], select {
 	border-radius: 10px;
 }
 
-.lien_frapper, .lien_ensorceler, .lien_bouleDeFeu {
+.lien_frapper, .lien_ensorceler, .lien_bouleDeFeu, .lien_soigner {
 	display: inline-block;
 	width: 150px;
 	/*padding: 5px;*/
@@ -185,6 +189,10 @@ input[type=submit], select {
 .lien_bouleDeFeu:hover {
 	background-color: #ffcc00;
 	color: black;
+}
+.lien_soigner:hover {
+	background-color: #3333ff;
+	color: white;
 }
 
 .listCharacters {
